# linked-list-sprint-project-Olouxii

./: CMakeLists.txt  README.md
data/: belarus.txt  bulgaria.txt  ukraine.txt
docs/: Olouxii (1).docx  Presentation_OlouXii_edited.pptx  QA_Documentation_OlouXii.docx  README.md
include/: Event.h  EventFunctions.h  funcs.h
lib/EventLib/: EventFunctions.cpp  EventFunctions.h
src/: EventFunctions.cpp  funcs.cpp  main.cpp
